Camino only - Bug 364497: when app is opened via a link, respect the external app pref for opening in the same window as saved sessions. Patch by Sean Murphy <murph@seanmurph.com> r=smorgan sr=pink